--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -6,33 +6,48 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <h1>Sunny Kumar</h1>
-    <p>i am learner.</p>
-    <img src="/sunny_bhardwaj.jpg" alt="My photo" height="100px" width="100px">
-    <h2>Education</h2>
-    <ul>
-        <li><b>10th class(CBSE) :</b> 8cgpa</li>
-        <li><b>12th class(BSEB) :</b> 77%</li>
-        <li><b>Btech(cse) :</b> 8cgpa</li>
-    </ul>
-    <h2>Skills</h2>
-    <ul>
-        <li>Python, c language</li>
-        <li>html, css, javascript</li>
-        <li>sql</li>
-    </ul>
-    <h2>Hobbies</h2>
-    <ul>
-        <li>Reading</li>
-        <li>Travelling</li>
-        <li>Playing cricket</li>
-    </ul>
-    <h2>Contact Me</h2>
-    <ul>
-        <li><b>Email : </b>sunnybhardwaj7549@gmail.com</li>
-        <li><b>phone number : </b>8102771822</li>
-        <li><a href="https://www.linkedin.com/in/sunny-kumar-10909728a/">Linkedin</a></li>
-    </ul>
-    <p>Made with &hearts; by sunny!</p>
+    <header>
+        <h1>Sunny Kumar</h1>
+        <p>i am learner.</p>
+        <img src="/sunny_bhardwaj.jpg" alt="My photo" height="100px" width="100px">
+    </header>
+    <hr>
+    <section>
+        <h2>Education</h2>
+        <ul>
+            <li><b>10th class(CBSE) :</b> 8cgpa</li>
+            <li><b>12th class(BSEB) :</b> 77%</li>
+            <li><b>Btech(cse) :</b> 8cgpa</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Python, c language</li>
+            <li>html, css, javascript</li>
+            <li>sql</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Reading</li>
+            <li>Travelling</li>
+            <li>Playing cricket</li>
+        </ul>
+    </section>
+    <hr>
+    <footer>
+        <h2>Contact Me</h2>
+        <ul>
+            <li><b>Email : </b>sunnybhardwaj7549@gmail.com</li>
+            <li><b>phone number : </b>8102771822</li>
+            <li><a href="https://www.linkedin.com/in/sunny-kumar-10909728a/">Linkedin</a></li>
+        </ul>
+        <hr>
+        <p>Made with &hearts; by sunny!</p>
+</footer>
 </body>
 </html>
