--- a/html/form.html
+++ b/html/form.html
@@ -6,25 +6,41 @@
     <title>Forms in html</title>
 </head>
 <body>
-    <button type="submit">Submit</button>
+    <!-- <button type="submit">Submit</button> -->
     <form action="\action">
         <div>
             <label for="username">Username: </label>
-            <input type="text" id="username" placeholder="username">
+            <input type="text" id="username" placeholder="username" name="user">
         </div>
         <div>
             <label for="password">Password: </label>
-            <input type="password" id="password" placeholder="password">
+            <input type="password" id="password" placeholder="password" name="password">
         </div>
         
         <div>
             <label for="age">Age: </label>
-            <input type="number" id="age" placeholder="age">
+            <input type="number" id="age" placeholder="age" name="age">
         </div>
-        <button type="submit">Submit</button>
-        <button type="reset">Reset</button>
-        <input type="button" value="submit" />
-        <input type="submit" value="click me" />
-    </form>>
+        <!-- <button type="submit">Submit</button>
+        <button type="reset">Reset</button> -->
+        <!-- <input type="button" value="submit" /> -->
+        <!-- <input type="submit" value="click me" /> -->
+        <button>submit</button>
+    </form>
+    <hr>
+    <form action="https://www.youtube.com/results">
+        <label for="search">search</label>
+        <input type="text" id="search" name="search_query" placehoder="search">
+        <button>search</button>
+    </form>
+
+    <hr>
+    <!-- create a search options that redirects its search to google -->
+
+    <form action="https://www.google.com/search">
+        <label for="google">Google</label>
+        <input type="text" placeholder="search on google" id="google" name="q">
+        <button>search</button>
+    </form>
 </body>
 </html>
