i have some more practice

--- a/html/checkbox.html
+++ b/html/checkbox.html
@@ -22,6 +22,16 @@
             <!-- value attribute user krne se information fruit=value ke form mein jaa rhe otherwise ye fruit=on jata -->
 
         </div>
+        <div>
+            choose your fruits
+            <input type="checkbox" name="fruits" id="mango" value="mango">
+            <label for="mango">mango</label>
+            <input type="checkbox" name="fruits" id="apple" value="apple">
+            <label for="mango">apple</label>
+            <input type="checkbox" name="fruits" id="banana" value="banana">
+            <label for="banana">banana</label>
+
+        </div>
     </form>
 </body>
 </html>
